# bigip-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
notes/: data-groups.md  f5-apis.md  fastmcp.md  validation-2025-11-07.md
src/bigip_mcp_server/: __init__.py  __main__.py  bigip_client.py  config.py  harness.py  server.py
src/bigip_mcp_server/tools/: __init__.py  datagroups.py  irules.py  logs.py  pools.py  virtual_servers.py
tests/: test_bigip_client.py  test_mcp_client_flow.py
tests/support/: __init__.py  fake_bigip.py
